--- a/hoi-det.html
+++ b/hoi-det.html
@@ -74,9 +74,9 @@
           <div style="margin-top: 10pt; margin-bottom: 20pt;">
             <center>
               <h5>Sample annotations for the description &#34;<strong><u>A person riding a bicycle.</u></strong>&#34;</h5>
-              <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00000019.png' alt='tutorial1' style='height:200px;'>
-              <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00000667.png' alt='tutorial2' style='height:200px;'>
-              <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00001538.png' alt='tutorial3' style='height:200px;'>
+              <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00000019.png' alt='tutorial1' style='height:200px;'>
+              <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00000667.png' alt='tutorial2' style='height:200px;'>
+              <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00001538.png' alt='tutorial3' style='height:200px;'>
             </center>
           </div>
 
@@ -113,7 +113,7 @@
             </p>
             <div class="collapse" id="expand-phs1" style="margin-bottom: 20pt;">
               <ul>
-                <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/step1_1.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px">
+                <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/step1_1.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px">
                 <div style="display: table;">
                   <div style="display: table-cell; vertical-align: middle;">
                     <li>
@@ -126,7 +126,7 @@
                     </li>
                   </div>
                 </div>
-                <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/step1_2.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 20px">
+                <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/step1_2.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 20px">
                 <div style="display: table; margin-top: 5px">
                   <div style="display: table-cell; vertical-align: middle;">
                     <li>
@@ -140,7 +140,7 @@
                     </li>
                   </div>
                 </div>
-                <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/step1_3.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 10px">
+                <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/step1_3.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 10px">
                 <div style="display: table; margin-top: 15px">
                   <div style="display: table-cell; vertical-align: middle;">
                     <li>
@@ -168,7 +168,7 @@
             </p>
             <div class="collapse" id="expand-phs2" style="margin-bottom: 20pt;">
               <ul>
-                <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/step2_1.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px">
+                <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/step2_1.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px">
                 <div style="display: table;">
                   <div style="display: table-cell; vertical-align: middle;">
                     <li>
@@ -181,7 +181,7 @@
                     </li>
                   </div>
                 </div>
-                <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/step2_2.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 20px">
+                <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/step2_2.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 20px">
                 <div style="display: table; margin-top: 5px">
                   <div style="display: table-cell; vertical-align: middle;">
                     <li>
@@ -195,7 +195,7 @@
                     </li>
                   </div>
                 </div>
-                <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/step2_3.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 10px">
+                <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/step2_3.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 10px">
                 <div style="display: table; margin-top: 15px">
                   <div style="display: table-cell; vertical-align: middle;">
                     <li>
@@ -223,7 +223,7 @@
             </p>
             <div class="collapse" id="expand-phs3" style="margin-bottom: 20pt;">
               <ol>
-                <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/step3_1.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 5px">
+                <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/step3_1.gif' alt='tutorial1' style="height: 75px; float: left; margin-right: 30px; margin-top: 5px">
                 <div style="display: table; margin-top: 5px">
                    <div style="display: table-cell; vertical-align: middle;">
                     <li>
@@ -282,25 +282,25 @@
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person riding an airplane.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00003297.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00003297.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person feeding a bird.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00004795.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00004795.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person petting a bird.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00005403.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00005403.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center; width: 220px">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person exiting an airplane.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00024354.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00024354.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
                     </figure>
                   </td>
                 </tr>
@@ -313,25 +313,25 @@
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person washing a bicycle</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_test2015_00004178.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_test2015_00004178.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person tying a boat.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00036117.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00036117.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person repairing an umbrella.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00024148.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00024148.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center; width: 200px">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person hosing a car.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_test2015_00006714.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_test2015_00006714.png' alt='tutorial1' style="height:180px; margin-bottom: 30px">
                     </figure>
                   </td>
                 </tr>
@@ -344,25 +344,25 @@
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person boarding an airplane.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00009719.png' alt='tutorial1' style="height:180px; margin-bottom: 10px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00009719.png' alt='tutorial1' style="height:180px; margin-bottom: 10px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person chasing a bird.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00016667.png' alt='tutorial1' style="height:180px; margin-bottom: 10px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00016667.png' alt='tutorial1' style="height:180px; margin-bottom: 10px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center;">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person herding a cow.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00006003.png' alt='tutorial1' style="height:180px; margin-bottom: 10px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00006003.png' alt='tutorial1' style="height:180px; margin-bottom: 10px">
                     </figure>
                   </td>
                   <td style="padding: 0px 2px 0px 2px; text-align: center; width: 200px">
                     <figure>
                       <figcaption style="text-align: center;"><h5><strong><u>A person eating at a dining table.</u></strong></h5></figcaption>
-                      <img src='http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/figures/anno_HICO_train2015_00000902.png' alt='tutorial1' style="height:180px; margin-bottom: 10px">
+                      <img src='http://www.umich.edu/~ywchao/hico/hoi-det-ui/figures/anno_HICO_train2015_00000902.png' alt='tutorial1' style="height:180px; margin-bottom: 10px">
                     </figure>
                   </td>
                 </tr>
@@ -578,14 +578,14 @@
 
         // Define some default input.
         var DEFAULT_INPUT = [
-          ['http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/HICO_train2015_00000019.jpg', 'A person riding a bicycle.', 'bicycle'],
-          ['http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/HICO_train2015_00000202.jpg', 'A person riding a bicycle.', 'bicycle'],
-          ['http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/HICO_train2015_00000667.jpg', 'A person riding a bicycle.', 'bicycle'],
-          ['http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/HICO_train2015_00001538.jpg', 'A person riding a bicycle.', 'bicycle'],
-          ['http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/HICO_train2015_00004795.jpg', 'A person feeding a bird.', 'bird'],
-          ['http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/HICO_train2015_00001741.jpg', 'A person riding a bicycle.', 'bicycle'],
-          ['http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/HICO_train2015_00001762.jpg', 'A person riding a bicycle.', 'bicycle'],
-          ['http://napoli18.eecs.umich.edu/public_html/demo/hoi-det-ui/HICO_train2015_00002338.jpg', 'A person riding a bicycle.', 'bicycle']
+          ['http://www.umich.edu/~ywchao/hico/hoi-det-ui/HICO_train2015_00000019.jpg', 'A person riding a bicycle.', 'bicycle'],
+          ['http://www.umich.edu/~ywchao/hico/hoi-det-ui/HICO_train2015_00000202.jpg', 'A person riding a bicycle.', 'bicycle'],
+          ['http://www.umich.edu/~ywchao/hico/hoi-det-ui/HICO_train2015_00000667.jpg', 'A person riding a bicycle.', 'bicycle'],
+          ['http://www.umich.edu/~ywchao/hico/hoi-det-ui/HICO_train2015_00001538.jpg', 'A person riding a bicycle.', 'bicycle'],
+          ['http://www.umich.edu/~ywchao/hico/hoi-det-ui/HICO_train2015_00004795.jpg', 'A person feeding a bird.', 'bird'],
+          ['http://www.umich.edu/~ywchao/hico/hoi-det-ui/HICO_train2015_00001741.jpg', 'A person riding a bicycle.', 'bicycle'],
+          ['http://www.umich.edu/~ywchao/hico/hoi-det-ui/HICO_train2015_00001762.jpg', 'A person riding a bicycle.', 'bicycle'],
+          ['http://www.umich.edu/~ywchao/hico/hoi-det-ui/HICO_train2015_00002338.jpg', 'A person riding a bicycle.', 'bicycle']
            ];
 
         var input = null;
